2000-08-06  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* netcomics (build_date_array): Changed so that list of dates
	generated are of the date at midnight so that the local timezone
	won't affect which dates are actually used.
	* lib/kingfeatures: Fixed Sunday-only comics (Flash Gordon, Prince
	Valiant, and Katzenjammer Kids) and their sizes, updated I Need
	Help's size, and fixed kingfeature2() so that it checks to see
	if kingfeature() returned undef or not.

2000-08-01  Martial Michel  <martial@users.sourceforge.net>

	* lib/ozy_millie: updated entry for temporary site, url change and
	sunday add
	* lib/suburban: updated site information
	* lib/norm: download site name to IP update

2000-07-30  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/gpf: Updated thanks to Claudemir Todo Bom
	* lib/this_modern_world: Updated thanks to Claudemir Todo Bom
	* lib/clan_cats: added "Clan of the Cats" thanks to Benjamin Cordes

2000-07-29  Martial Michel  <martial@users.sourceforge.net>

	* Added the -A option to  act as if the day  specified by S T or E
	was "today" (useful for downloading a whole missed day)

2000-07-25  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/kingfeatures (kingfeature): Fixed 'base' field thanks to 
	Claudemir Todo Bom.
	* netcomics (get_comics): Fixed previous change made which caused
	files to incorrectly be added to the successfully downloaded list.

2000-07-19  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/red_meat: Updated thanks to Jerrad Pierce.

2000-07-18  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Added comic: Everything Jake, thanks to Max Zomborszki.
	* netcomics: Made 'exprs' field as a hash to not have to have the
	'comic' field.

2000-07-16  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Moved source code from personal ClearCase vob to SourceForge CVS
	repository.

2000-07-06  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* potd/astronomy: Fixed author expression to grab as soon as